Agregados timer y eventos

--- a/index.html
+++ b/index.html
@@ -6,6 +6,9 @@
   <title>Document</title>
 </head>
 <body>
+  <form id="form">
+    <input type="text" name="usuario" id="text-input" placeholder="Ingresa un nombre">
+  </form>
   <div id="resultados"></div>
   <script src="main.js"></script>
 </body>
