--- a/index.html
+++ b/index.html
@@ -3,9 +3,11 @@
 <head>
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
-  <title>Document</title>
+  <link rel="stylesheet" href="style.css">
+  <title>Buscador de GitHub</title>
 </head>
 <body>
+  <input type="button" value="Tema" id="temas">
   <form id="form">
     <input type="text" name="usuario" id="text-input" placeholder="Ingresa un nombre">
   </form>
