Agregados estilos en barra de búsquedas

--- a/index.html
+++ b/index.html
@@ -7,10 +7,12 @@
   <title>Buscador de GitHub</title>
 </head>
 <body>
-  <input type="button" value="Tema" id="temas">
-  <form id="form">
-    <input type="text" name="usuario" id="text-input" placeholder="Ingresa un nombre">
-  </form>
+  <nav class="bar">
+    <input type="button" value="Cambiar Tema" id="temas">
+    <form id="form">
+      <input type="text" name="usuario" id="text-input" placeholder="Ingresa un nombre">
+    </form>
+  </nav>
   <div id="resultados"></div>
   <script src="main.js"></script>
 </body>
