--- a/index.html
+++ b/index.html
@@ -7,6 +7,7 @@
   <title>Buscador de GitHub</title>
 </head>
 <body>
+  <h1 class="titulo">Buscador de GitHub</h1>
   <nav class="bar">
     <input type="button" value="Cambiar Tema" id="temas">
     <form id="form">
